--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "less-loader": "^5.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuex": "^3.1.2",
-    "wangeditor": "^3.1.1"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
