--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.1",
+    "carddragger": "^0.3.6",
     "echarts": "^4.6.0",
     "element-ui": "^2.13.0",
     "less": "^3.10.3",
